Style and grammar run through up to 04

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -63,14 +63,14 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 ```
 
 This thesis is about applied and methodological Bayesian statistics.
-It is applied and methodological in that the primary concern is real world questions and the means to answer them.
+It is applied and methodological in that the primary concern is real-world questions and the means to answer them.
 The statistical approach is Bayesian because probability theory is used to arrive at conclusions based on models for observed data.
 
 The applied focus of this thesis is in obtaining the strategic information needed to plan the response to the HIV (human immunodeficiency virus) epidemic in sub-Saharan Africa (SSA).
 Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) among non-infants in SSA [@ihme2019; Figure \@ref(fig:gbd)].
 Quantification of the epidemic using statistics is a crucial part of the public health response.
 Effective implementation of HIV prevention and treatment requires strategic information.
-However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
+However, producing suitable estimates of relevant indicators is complicated by a range of statistical challenges.
 
 (ref:gbd) HIV is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on the severity of the condition.
 
@@ -81,7 +81,7 @@ knitr::include_graphics("figures/introduction/gbd.png")
 The data used were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which observations were recorded.
 Spatio-temporal data have important recurring commonalities across a diverse range of application settings.
-The work conducted in this thesis uses, and aspires to contribute to, techniques from spatio-temporal statistics.
+The work conducted in this thesis uses and aspires to contribute to techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
@@ -91,7 +91,7 @@ To facilitate reproducible research, the R package `orderly` [@orderly] was used
 
 This thesis is structured as follows:
 
-* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describes the challenges faced by surveillance efforts.
+* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic and describes the challenges faced by surveillance efforts.
 * Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
 In disease mapping, areas correspond to the administrative divisions of a country, which are typically not a grid.
