--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -47,7 +47,7 @@ coverage2022 <- 76
 <!-- What is HIV -->
 HIV is a retrovirus which infects humans.
 If untreated, infection with HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
-HIV primarily attacks a type of white blood cell vital for the function of the immune system.
+HIV primarily attacks a type of white blood cell vital for proper function of the immune system.
 As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias, which can result in death.
 
 <!-- HIV is a big problem, plus how is it transmitted -->
@@ -68,7 +68,7 @@ global_fund <- round((24.2 + 5)) * 1e9
 An ongoing global effort has been made to respond to the epidemic.
 The multifaceted response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
 on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-As an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
+As an indication of the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -108,11 +108,11 @@ Based on this evidence, VMMC has been recommended since 2007 by the World Health
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher [@mcgillen2018emerging; @unaids2021vmmc].
 
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
-PrEP has been shown to be effective at an individual-level across a number of RCTs [@baeten2012antiretroviral; @thigpen2012antiretroviral], but there are few population-level studies.
+PrEP has been shown to be effective at an individual level across a number of RCTs [@baeten2012antiretroviral; @thigpen2012antiretroviral], but there are few population-level studies.
 Though PEP cannot be studied with RCTs, observational studies indicate it is highly effective [@dominguez2016updated].
 These medical interventions are more costly than other prevention options, so are primarily useful in high risk settings.
 
-Though implementation of the above interventions has enabled important progress to be made, there remains much more to do.
+Though implementation of these interventions has enabled important progress, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one death every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as a global public health threat by 2030 [@assembly2016political].
 To meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding, renewed commitments are required [@economist2023triple].
