--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -37,7 +37,7 @@ Bayesian statistics is a mathematical paradigm for learning from data.
 Two reasons stand out as to why it is especially well suited to facing the challenges presented in Section \@ref(surveillance).
 First, it allows for principled and flexible integration of prior domain knowledge.
 Second, uncertainty over all unknown quantities is handled as an integral part of the Bayesian paradigm.
-This section provides a brief, and at times opinionated, overview of Bayesian statistics.
+This section provides a brief and at times opinionated overview of Bayesian statistics.
 For a more complete introduction, I recommend @gelman2013bayesian, @mcelreath2020statistical or @gelman2020bayesian.
 
 ### Bayesian modelling
@@ -281,7 +281,7 @@ For example, those of the same sex are more likely to be similar, as are those o
 
 ## Model structure {#model-structure}
 
-The spatio-temporal data used in this thesis is not IID (Section \@ref(correlation-structure)).
+The spatio-temporal data used in this thesis are not IID (Section \@ref(correlation-structure)).
 This section discusses ways to use statistical models to encode more complex relations between observations mathematically.
 Simple structures are discussed first, beginning with the linear model.
 Extensions are introduced one at a time, culminating in the model structures used throughout the thesis.
