--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -145,7 +145,7 @@ The Besag model was originally proposed by @besag1991bayesian for use in image a
 In this setting, areas correspond to pixels arranged in a regular lattice structure.
 In an image, the data point at each pixel can be thought of as an average of the intensity or colour over the space represented by the pixel.
 
-Since it's original proposal, the Besag model has seen wider use.
+Since its original proposal, the Besag model has seen wider use.
 However, for small-area estimation of HIV, the spatial structure corresponds to administrative units.
 These administrative units may have a more irregular spatial structure than a lattice. 
 Furthermore, data points may not come about by uniform averaging over a space.
@@ -164,12 +164,12 @@ knitr::include_graphics("figures/beyond-borders/maup1.png")
 
 A fundamental objection is that summarising a geometry by an adjacency graph represents a loss of information.
 Many geometries share the same adjacency graph, and as such are isomorphic under the Besag model (Figure \@ref(fig:maup1)).
-Though not in itself a problem, this fact prompts consideration as to whether the class of geometries with the same adjacency graph is sufficiently similar to merit identical models.
+Though not in itself a problem, this fact prompts consideration whether the class of geometries with the same adjacency graph is sufficiently similar to merit identical models.
 
 Intuitively, the more regular the spatial structure, the less information is lost in compression to an adjacency graph.
 In image analysis, very little spatial information is lost in compression of a lattice structure to an adjacency graph.
 On the other hand, the regions of a country, determined by political and geographic forces, tend to display greater irregularity.
-The appropriateness of adjacency compression therefore varies by the type of geometry common to the application setting.
+The appropriateness of adjacency compression varies therefore by the type of geometry common to the application setting.
 
 The regularity of realistic geometries may help to constrain each class to be similar.
 In other words, although pathological geometries can be constructed, they might be implausible in statistical practice and so of limited concern.
@@ -177,7 +177,7 @@ In other words, although pathological geometries can be constructed, they might 
 #### Mean structure
 
 In the Besag model all adjacent areas count equally in the equation for the conditional mean.
-This assumption is unsatisfying: for most geometries, we expect different amounts of correlation between neighbouring areas.
+This assumption is unsatisfying, as for most geometries we expect different amounts of correlation between neighbouring areas.
 Figure \@ref(fig:maup1) illustrates a number of heuristic features for neighbour importance.
 In Panel \@ref(fig:maup1)C, the area with a longer shared border would be expected to be more highly correlated.
 In Panel \@ref(fig:maup1)D, the area with a closer centre would be expected to be more highly correlated.
@@ -191,7 +191,7 @@ knitr::include_graphics("figures/beyond-borders/maup2.png")
 ```
 
 In Equation \@ref(eq:besag) the precision of $u_i$ is proportional to its number of neighbours $n_{\delta i}$.
-It follow that as $n_{\delta i} \to \infty$ then $\text{Var}(u_i) \to 0$.
+It follows that as $n_{\delta i} \to \infty$ then $\text{Var}(u_i) \to 0$.
 This is illustrated by Figure \@ref(fig:maup2) where the area on the right is repeatedly divided such that its number of neighbours increases.
 This property is a consequence of averaging the conditional mean over a greater number of areas, which, in certain situations, can correspond to a greater amount of information.
 However, if the amount of information in the shaded area remains fixed, it is inappropriate that $\text{Var}(u_1)$ should tend to zero as a result of drawing additional, arbitrary, boundaries.
